<resources>
    <string name="app_name" translatable="false">LuaDroid</string>
    <string name="run">Run</string>
    <string name="view_result">View Result</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="gotoLine">Go to Line</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="not_found">Not Found</string>
</resources>
